<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.chbap.myappportfplio.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_nanodegree_app"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:id="@+id/textView" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/popular_movies"
        android:id="@+id/button"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:background="#2e3d49"
        android:textColor="#ffffffff"
        android:layout_marginTop="25dp"
        android:onClick="showToastPopularMovie" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/stock_hawk"
        android:id="@+id/button2"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:background="#2e3d49"
        android:textColor="#ffffffff"
        android:layout_marginTop="20dp"
        android:onClick="showToastSTOCKHAWK" />

    <Button
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:background="#2e3d49"
        android:textColor="#ffffffff"
        android:layout_marginTop="20dp"
        android:onClick="showToastBUILDITBIGGER" />

    <Button
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/make_your_app_material"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:background="#2e3d49"
        android:textColor="#ffffffff"
        android:layout_marginTop="20dp"
        android:onClick="showToastMAKEYOURAPPMATERIAL" />

    <Button
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/go_ubiquitous"
        android:id="@+id/button5"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true"
        android:background="#2e3d49"
        android:textColor="#ffffffff"
        android:layout_marginTop="20dp"
        android:onClick="showToastGOUBIQUITOUS" />

    <Button
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/button6"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true"
        android:background="#2e3d49"
        android:textColor="#ffffffff"
        android:layout_marginTop="20dp"
        android:onClick="showToastCAPSTONE" />

</RelativeLayout>
